--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <style>
     #co {
       position: fixed;
+      background-color: darkgreen !important;
       display: block;
       right: 0;
       bottom: 0;
